Fix spacing issues with koro effect

--- a/web/app/themes/helsinki-testbed/resources/assets/styles/blocks/group.scss
+++ b/web/app/themes/helsinki-testbed/resources/assets/styles/blocks/group.scss
@@ -1,4 +1,7 @@
 .wp-block-group {
+  $basicKoroHeight: 25px;
+  $pulseKoroHeight: 50px;
+
   // group blocks can contain other aligned blocks.
   &:not(.alignwide):not(.alignfull) {
     .alignwide,
@@ -39,27 +42,52 @@
   &[class*='is-style-koro-'] {
     position: relative;
 
-    // On the frontend move the block so that the effect is on top of an
-    // adjacent block. This is not done in the editor in order not to obstruct
-    // any controls.
-    @if $is-frontend {
-      &[class*='is-style-koro-top-'] {
-        top: -48px;
-        margin-bottom: -48px;
+    // On the frontend if an optional class is added, move the block so that the
+    // effect is on top of an adjacent block. This is not done in the editor in
+    // order not to obstruct any controls.
+    &.cover-adjacent {
+      @if $is-frontend {
+        &[class*='is-style-koro-top-'] {
+          top: -48px;
+          margin-bottom: -48px;
 
-        @include mq($from: medium) {
-          top: -72px;
-          margin-bottom: -75px;
+          @include mq($from: medium) {
+            top: -72px;
+            margin-bottom: -75px;
+          }
+        }
+
+        &[class*='is-style-koro-bottom-'] {
+          bottom: -48px;
+          margin-top: -48px;
+
+          @include mq($from: medium) {
+            bottom: -72px;
+            margin-top: -75px;
+          }
         }
       }
+    }
+    // If the cover-adjacent class is not added, instead make more space so that
+    // spacing between blocks is preserved despite the effect.
+    &:not(.cover-adjacent) {
+      @include breakpoint-value($block-margins) {
+        $margin: $-bp-value;
 
-      &[class*='is-style-koro-bottom-'] {
-        bottom: -48px;
-        margin-top: -48px;
+        &.is-style-koro-top-basic {
+          margin-top: calc(#{$margin} + #{$basicKoroHeight});
+        }
 
-        @include mq($from: medium) {
-          bottom: -72px;
-          margin-top: -75px;
+        &.is-style-koro-top-pulse {
+          margin-top: calc(#{$margin} + #{$pulseKoroHeight});
+        }
+
+        &.is-style-koro-bottom-basic {
+          margin-bottom: calc(#{$margin} + #{$basicKoroHeight});
+        }
+
+        &.is-style-koro-bottom-pulse {
+          margin-bottom: calc(#{$margin} + #{$pulseKoroHeight});
         }
       }
     }
@@ -91,10 +119,10 @@
     }
   }
 
-  .is-style-koro-bottom-basic,
-  .is-style-koro-top-basic {
+  &.is-style-koro-bottom-basic,
+  &.is-style-koro-top-basic {
     &::before {
-      height: 25px;
+      height: $basicKoroHeight;
     }
     @each $color-name, $color-value in $color-palette {
       &.has-#{$color-name}-background-color::before {
@@ -103,8 +131,8 @@
     }
   }
 
-  .is-style-koro-bottom-pulse,
-  .is-style-koro-top-pulse {
+  &.is-style-koro-bottom-pulse,
+  &.is-style-koro-top-pulse {
     &::before {
       height: 50px;
     }
